fixing color of navbar brand on mobile

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -38,32 +38,9 @@ nav .siteElements a {
     .navbar-inverse .navbar-brand,
     .navbar-inverse .navbar-brand:hover, 
     .navbar-inverse .navbar-brand:focus {
-        background-color: transparent;
-        color: #999999;
         font-size: 18px;
-        cursor: default;
     }
     nav a {
-        color: black;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 18px;
-    }
-}
-
-@media only screen and (max-width: 768px) {
-    .navbar-inverse .navbar-brand,
-    .navbar-inverse .navbar-brand:hover, 
-    .navbar-inverse .navbar-brand:focus {
-        background-color: transparent;
-        color: #999999;
-        font-size: 18px;
-        cursor: default;
-    }
-    nav a {
-        color: black;
-        text-decoration: none;
-        font-weight: bold;
         font-size: 18px;
     }
 }
